--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,8 +61,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   
-  # assets:
-    #  - assets/images/
+  assets:
+    - assets/images/logo.png
+    - assets/images/perfil.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
