--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,7 @@ flutter:
   
   assets:
     - assets/images/logo.png
-    - assets/images/perfil.png
+    - assets/images/perfil2.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
