--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.from_end">
+    package="com.jobservices.from_end">
    <application
         android:label="Job services"
         android:name="${applicationName}"
