--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = from_end
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.fromEnd
+PRODUCT_BUNDLE_IDENTIFIER = com.jobservices.fromEnd
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2022 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2022 com.jobservices. All rights reserved.
