--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ flutter_icons:
   ios: true
   image_path: "assets/images/logo.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
+  flutter_icons:
+  adaptive_icon_background: "assets/images/background.png"
+  adaptive_icon_foreground: "assets/images/foreground.png"
   flutter_native_splash:
     color: "#0C5896"
     image: assets/images/logo.png
