--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   page_transition: ^2.0.9
   animated_splash_screen: ^1.3.0
+  http: ^0.13.5
+  
 
 dev_dependencies:
   flutter_test:
